Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -78,7 +78,7 @@ Note that for some sense inventories, you can use various modules, depending on 
 
 === Why am I getting a lot of errors or warnings when reading in the Senseval and !SemEval data sets? ===
 
-Many of the Senseval and !SemEval data sets, as originally distributed by the task organizers, contain errors such as incorrect POS tags, references to nonexistent satellite IDs, and references to nonexistent WordNet sense keys.  You can instruct some collection readers and annotators to ignore certain types of errors (e.g., with the `PARAM_IGNORE_MISSING_SATELLITES` configuration parameter), though of course this may lead to reduced accuracy or unpredictable effects with your disambiguation algorithm.  Alternatively you can use the various [https://code.google.com/p/dkpro-wsd/source/browse/#svn%2Ftrunk%2Fde.tudarmstadt.ukp.dkpro.wsd.senseval%2Fsrc%2Fmain%2Fresources patches and conversion scripts] we provide to fix them.
+Many of the Senseval and !SemEval data sets, as originally distributed by the task organizers, contain errors such as incorrect POS tags, references to nonexistent satellite IDs, and references to nonexistent WordNet sense keys.  You can instruct some collection readers and annotators to ignore certain types of errors (e.g., with the `PARAM_IGNORE_MISSING_SATELLITES` configuration parameter), though of course this may lead to reduced accuracy or unpredictable effects with your disambiguation algorithm.  Alternatively you can use the various [https://code.google.com/p/dkpro-wsd/source/browse/#svn%2Ftrunk%2Fde.tudarmstadt.ukp.dkpro.wsd.senseval%2Fsrc%2Fmain%2Fresources patches and conversion scripts] we provide to fix the data sets.
 
 Some third-party redistributions of the Senseval data sets also contain errors.  Most notably, [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Rada Mihalcea's "SemCor XML" conversions of the Senseval-2 and -3 data sets] are not actually valid XML.  To use these data sets with DKPro WSD (or almost any other tool that reads XML) you must first convert them to XML using [https://code.google.com/p/dkpro-wsd/source/browse/#svn%2Ftrunk%2Fde.tudarmstadt.ukp.dkpro.wsd.senseval%2Fsrc%2Fmain%2Fresources the scripts we provide].  [http://www.d.umn.edu/~tpederse/data.html Ted Pedersen's conversions] also do not validate as conforming XML, though we haven't yet produced a conversion script.
 
