Added links to LSRs

--- a/wiki/LSRs.wiki
+++ b/wiki/LSRs.wiki
@@ -30,7 +30,7 @@ The [http://www.ukp.tu-darmstadt.de/software/twsi-sense-substituter/ TWSI sense 
 
 == Wiktionary and Wikipedia ==
 
-Database dumps of Wiktionary and Wikipedia for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.lsr` module are available from the [http://dumps.wikimedia.org/ Wikimedia Downloads] page.  Alternatively you can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing Wiktionary and Wikipedia for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
+Database dumps of [https://www.wiktionary.org/ Wiktionary] and [https://www.wikipedia.org/ Wikipedia] for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.lsr` module are available from the [http://dumps.wikimedia.org/ Wikimedia Downloads] page.  Alternatively you can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing Wiktionary and Wikipedia for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
 
 == !GermaNet ==
 
@@ -38,15 +38,15 @@ Instuctions for obtaining !GermaNet can be found on the [http://www.sfs.uni-tueb
 
 == !FrameNet ==
 
-You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing !FrameNet for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
+You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing ![https://framenet.icsi.berkeley.edu/fndrupal/ FrameNet] for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
 
 == !VerbNet ==
 
-You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing !VerbNet for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
+You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing ![http://verbs.colorado.edu/~mpalmer/projects/verbnet.html VerbNet] for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
 
 == !OmegaWiki ==
 
-You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing !OmegaWiki for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
+You can [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing ![http://www.omegawiki.org/ OmegaWiki] for use with the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module.
 
 == !OpenThesaurus ==
 
