--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -26,9 +26,11 @@ You can then add individual DKPro WSD artifacts to your POM.  For example:
 <dependency>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-    <version>0.1.0</version>
+    <version>0.9.0</version>
 </dependency>
 }}}
+
+(Of course, you will probably always want to use the latest available version.)
 
 == Obtaining data and resources ==
 
