* [ChangeLog] - release history and change log

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -6,6 +6,7 @@
   * [WSDCorpora List of WSD corpora] - information on common WSD data sets and where to obtain them
   * [LSRs List of LSRs] - information on common WSD sense inventories and where to obtain them
   * [FAQ Frequently asked questions] - answers to common questions about DKPro WSD
+  * [ChangeLog] - release history and change log
 
 
 == Miscellaneous pages ==
