--- a/wiki/LSRs.wiki
+++ b/wiki/LSRs.wiki
@@ -12,7 +12,7 @@ Versions 1.5 to 3.1 of WordNet can be obtained from the [http://wordnet.princeto
 
 DKPro WSD can automatically convert between versions of WordNet.  In order to use this feature you need to obtain synset mapping files such as the [http://www.talp.upc.edu/index.php/technology/resources/multilingual-lexicons-and-machine-translation-resources/multilingual-lexicons/98-wordnet-mappings WN-Map mappings] from the UPC TALP Research Center.
 
-To access WordNet through the `de.tudarmstadt.ukp.dkpro.wsd.si.wordnet` module, you need to prepare an [http://sourceforge.net/apps/trac/extjwnl/wiki/GettingStarted extJWNL properties file] which points to your WordNet installation.
+To access WordNet through the `de.tudarmstadt.ukp.dkpro.wsd.si.wordnet` module, you need to prepare an [https://code.google.com/p/dkpro-wsd-gpl/source/browse/trunk/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/src/main/resources/extjwnl_properties.xml extJWNL properties file] which points to your WordNet installation.
 
 You can also access WordNet through the `de.tudarmstadt.ukp.dkpro.wsd.si.lsr` module (in which case you need to prepare a DKPro LSR `resources.xml` file which points to your WordNet installation) or the `de.tudarmstadt.ukp.dkpro.wsd.si.uby` module (in which case you need to produce or [http://uby.ukp.informatik.tu-darmstadt.de/uby/ download a UBY database] containing WordNet).
 
