--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -84,6 +84,10 @@ Many of the Senseval and !SemEval data sets, as originally distributed by the ta
 
 Some third-party redistributions of the Senseval data sets also contain errors.  Most notably, [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Rada Mihalcea's "SemCor XML" conversions of the Senseval-2 and -3 data sets] are not actually valid XML.  To use these data sets with DKPro WSD (or almost any other tool that reads XML) you must first convert them to XML using [https://code.google.com/p/dkpro-wsd/source/browse/#svn%2Ftrunk%2Fde.tudarmstadt.ukp.dkpro.wsd.senseval%2Fsrc%2Fmain%2Fresources the scripts we provide].  [http://www.d.umn.edu/~tpederse/data.html Ted Pedersen's conversions] also do not validate as conforming XML, though we haven't yet produced a conversion script.
 
+=== Why am I getting a lot of errors when reading in the !SemCor corpus? ===
+
+Most likely you are trying to use [http://www.cse.unt.edu/~rada/downloads.html#semcor the SemCor files distributed by Rada Mihalcea], which are not actually valid XML.  To use these data sets with DKPro WSD (or almost any other tool that reads XML) you must first convert them to XML.  The NLTK project has already produced [http://nltk.github.com/nltk_data/packages/corpora/semcor.zip an XML version of SemCor 3.0], so if you want a !WordNet 3.0–annotated version of !SemCor, you can just download that one.
+
 === Where can I get the !WordNet 1.7 pre-release used by the English Senseval-2 tasks? ===
 
 You probably can't.  This version of WordNet was never officially published, but was made available only to the participants.  We contacted both the WordNet maintainers and the Senseval-2 organizers, and neither was able to locate a copy of this version.  A Senseval-2 participant sent us a copy he had archived, but its sense keys turned out to be incompatible with those of the Senseval-2 data sets.  If you must use this data set, then you could use WordNet 1.7, but keep in mind that you will not be able to achieve full accuracy, since some of the sense keys found in the answer key won't exist in the sense inventory.
